# Redes_Neurais_Intro

./: README.md  pyproject.toml
perceptron_one_layer/: main.py  perceptron_2.py  perceptron_3.py
